app/istio-app.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoservice-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoservice
  namespace: default
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/echoservice-gateway
  http:
  - route:
    - destination:
        host: echoserver
        subset: v1
      weight: 50
    - destination:
        host: echoserver
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoserver-destination
  namespace: default
spec:
  host: echoserver
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
